# pyCityParkingPermit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/pyCityParkingPermit/: __init__.py  _utils.py  api.py  auth.py  exceptions.py  models.py
tests/: test_client.py
